--- a/pages/single/index.wxml
+++ b/pages/single/index.wxml
@@ -58,6 +58,8 @@
       </view>
     </view>
   </view>
+  <view class="no-data" wx:if="{{!list.data.length}}">暂无数据</view>
+
 </view>
 
 <navigator class="add-single" url="/pages/single/release/release">
