--- a/pages/home/search/search.wxml
+++ b/pages/home/search/search.wxml
@@ -48,6 +48,6 @@
   </view>
 
 <view class="btn-form">
-  <view class="btn btn_white">重置</view>
+  <view class="btn btn_white" bindtap="resetHomeFilter">重置</view>
   <view class="btn btn_fill" bindtap="btn">确定</view>
 </view>
