--- a/pages/message/index.wxml
+++ b/pages/message/index.wxml
@@ -1,29 +1,30 @@
 
-<view class="list-cell"> 
+<view class="list-cell" bindtap="goDetail" data-type="see_who"> 
   <image class="icon" src="/images/message/icon_01.png"></image>
   <text>我看过谁</text>
+  <mp-badge content="1" style="margin-left: 5px;"/>
 </view>
-<view class="list-cell"> 
+<view class="list-cell" bindtap="goDetail" data-type="who_see"> 
   <image class="icon" src="/images/message/icon_02.png"></image>
   <text>谁看过我</text>
 </view>
-<view class="list-cell"> 
+<view class="list-cell" bindtap="goDetail" data-type="liked"> 
   <image class="icon" src="/images/message/icon_03.png"></image>
   <text>我心动的</text>
 </view>
-<view class="list-cell"> 
+<view class="list-cell" bindtap="not_open_yet"> 
   <image class="icon" src="/images/message/icon_04.png"></image>
   <text>我喜欢的音频</text>
 </view>
-<view class="list-cell"> 
+<view class="list-cell" bindtap="not_open_yet"> 
   <image class="icon" src="/images/message/icon_05.png"></image>
   <text>我关注的导师</text>
 </view>
-<view class="list-cell"> 
+<view class="list-cell" bindtap="not_open_yet"> 
   <image class="icon" src="/images/message/icon_06.png"></image>
   <text>我收藏的文章</text>
 </view>
-<view class="list-cell"> 
+<view class="list-cell" bindtap="not_open_yet"> 
   <image class="icon" src="/images/message/icon_07.png"></image>
   <text>系统消息</text>
 </view>
