--- a/pages/myself/myself.wxml
+++ b/pages/myself/myself.wxml
@@ -26,15 +26,15 @@
       <navigator class="list-cell" url="/pages/myself/member/member" hover-class="none">
         <text>会员服务</text>
       </navigator>
-      <view class="list-cell"> <text >我要置顶</text></view>
+      <view class="list-cell" bindtap="not_open_yet"> <text >我要置顶</text></view>
       <navigator class="list-cell" url="/pages/single/my_single/my_single" hover-class="none">
         <text>我的单身圈</text>
       </navigator>
       <navigator class="list-cell" url="/pages/myself/setting/setting" hover-class="none">
         <text>设置</text>
       </navigator>
-      <view class="list-cell"> <text>关于美途婚恋</text></view>
-      <view class="list-cell"> <text>安全交友提示</text></view>
+      <view class="list-cell"  bindtap="not_open_yet"> <text>关于美途婚恋</text></view>
+      <view class="list-cell"  bindtap="not_open_yet"> <text>安全交友提示</text></view>
     </view>
 
   </view>
