--- a/pages/myself/setting/setting.wxml
+++ b/pages/myself/setting/setting.wxml
@@ -1,13 +1,13 @@
 <!--pages/myself/setting/setting.wxml-->
 <view class="setting-view">
-  <view class="list-cell"><text>账号与安全</text> </view>
+  <view class="list-cell"   bindtap="not_open_yet"><text>账号与安全</text> </view>
   <view class="list-cell list-cell-none"><text class="fl">隐身访问</text>
     <view class="fr">
       <switch color="#C4AB5B" checked="{{switchChecked}}" bindchange="switchChecked"/>
     </view>
   </view>
   <view class="list-cell" bindtap="unsubscribe"> <text>注销资料</text></view>
-  <view class="list-cell"> <text>常见问题</text></view>
-  <view class="list-cell"> <text>意见反馈</text></view>
-  <view class="list-cell"> <text>联系我们</text></view>
+  <view class="list-cell" bindtap="not_open_yet"> <text>常见问题</text></view>
+  <view class="list-cell" bindtap="not_open_yet"> <text>意见反馈</text></view>
+  <view class="list-cell" bindtap="not_open_yet"> <text>联系我们</text></view>
 </view>
